--- a/ShukhlyadaBackend/Wisemoney.Infrastructure/Shukhlyada.Infrastructure.csproj
+++ b/ShukhlyadaBackend/Wisemoney.Infrastructure/Shukhlyada.Infrastructure.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,11 +14,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Wisemoney.Infrastructure\Shukhlyada.Infrastructure.csproj" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Wisemoney.Domain\Shukhlyada.Domain.csproj" />
   </ItemGroup>
 
 </Project>
