--- a/ShukhlyadaBackend/Shukhlyada.Api/Shukhlyada.Api.csproj
+++ b/ShukhlyadaBackend/Shukhlyada.Api/Shukhlyada.Api.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>ea522af0-a402-433c-b568-8263deed7018</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
