--- a/ShukhlyadaBackend/Wisemoney.BusinessLogic/Shukhlyada.BusinessLogic.csproj
+++ b/ShukhlyadaBackend/Wisemoney.BusinessLogic/Shukhlyada.BusinessLogic.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.11.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="5.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Wisemoney.Domain\Shukhlyada.Domain.csproj" />
+    <ProjectReference Include="..\Wisemoney.Infrastructure\Shukhlyada.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
