--- a/ShukhlyadaBackend/Shukhlyada.Api/Shukhlyada.Api.csproj
+++ b/ShukhlyadaBackend/Shukhlyada.Api/Shukhlyada.Api.csproj
@@ -5,6 +5,11 @@
     <UserSecretsId>ea522af0-a402-433c-b568-8263deed7018</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
