Fixed CreateChannel(user assigned channel creator) & Added Get Subscribed Channels

--- a/ShukhlyadaBackend/Wisemoney.BusinessLogic/Shukhlyada.BusinessLogic.csproj
+++ b/ShukhlyadaBackend/Wisemoney.BusinessLogic/Shukhlyada.BusinessLogic.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Specifications\NewFile1.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MailKit" Version="2.11.1" />
     <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="5.0.4" />
   </ItemGroup>
